add getPerson api
