# models/person.go
@@ -4,12 +4,12 @@ import "time"
 
 type Person struct {
 	Name                string       `json:"name,omitempty"`
-	PreferredName       string       `json:"preferred_name,omitempty"`
-	GivenName           string       `json:"given_name,omitempty"`
-	FamilyName          string       `json:"family_name,omitempty"`
-	PreferredGivenName  string       `json:"preferred_given_name,omitempty"`
-	PreferredFamilyName string       `json:"preferred_family_name,omitempty"`
-	HonorificPrefix     string       `json:"honorific_prefix,omitempty"`
+	PreferredName       string       `json:"preferredName,omitempty"`
+	GivenName           string       `json:"givenName,omitempty"`
+	FamilyName          string       `json:"familyName,omitempty"`
+	PreferredGivenName  string       `json:"preferredGivenName,omitempty"`
+	PreferredFamilyName string       `json:"preferredFamilyName,omitempty"`
+	HonorificPrefix     string       `json:"honorificPrefix,omitempty"`
 	Email               string       `json:"email,omitempty"`
 	Active              bool         `json:"active"`
 	Username            string       `json:"username,omitempty"`
@@ -19,8 +19,8 @@ type Person struct {
 
 type PersonRecord struct {
 	Person
-	CreatedAt time.Time `json:"created_at,omitempty"`
-	UpdatedAt time.Time `json:"updated_at,omitempty"`
+	CreatedAt time.Time `json:"createdAt,omitempty"`
+	UpdatedAt time.Time `json:"updatedAt,omitempty"`
 }
 
 type Identifier struct {
